name:                Ostari
version:             0.1.0.0
synopsis:            A macro system and runtime environment to write actions in Baltag's Dynamic Epistemic Logic
homepage:            https://github.com/yawgmoth/Ostari
license:             OtherLicense
license-file:        CRAPL-LICENSE.txt
author:              Eger Markus
maintainer:          meger@ncsu.edu
copyright:           2017 Eger Markus
category:            Logic
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/yawgmoth/Ostari#readme>

library
  hs-source-dirs:      src
  exposed-modules:     GameParser
                     , Baltag
                     , AbstractActions
                     , ActionCompiler
                     , BaltagExecution
                     , AbstractActionParser
  other-modules:       BaltagString
                     , BaseTypes
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , parsec
  default-language:    Haskell2010

executable Ostari
  hs-source-dirs:      app
  main-is:             rungame.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Ostari
                     , bytestring
                     , containers
                     , mtl
                     , parallel
                     , parsec
                     , split
  default-language:    Haskell2010

test-suite Ostari-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Ostari
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yawgmoth/Ostari
